<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/suggested_activity_card"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_spacing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_spacing">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_max="168dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder_product_image" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toTopOf="@id/product_image"
            tools:text="@string/placeholder_product_name" />

        <RatingBar
            android:id="@+id/product_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_small_spacing"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            tools:rating="4.5" />

        <TextView
            android:id="@+id/product_reviews_counter"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_rating"
            app:layout_constraintTop_toTopOf="@id/product_rating"
            tools:text="@string/placeholder_product_number_of_reviews" />

        <LinearLayout
            android:id="@+id/usp_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_rating"
            app:layout_constraintTop_toBottomOf="@id/product_rating"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/product_price"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_rating"
            app:layout_constraintTop_toBottomOf="@id/usp_list"
            tools:text="@string/placeholder_product_price" />

        <TextView
            android:id="@+id/product_delivery_tomorrow"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:drawablePadding="@dimen/xx_small_spacing"
            android:text="@string/product_item_lbl_delivery_tomorrow"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_check"
            app:drawableTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_price"
            app:layout_constraintTop_toBottomOf="@id/product_price"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/product_availability"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xx_small_spacing"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_delivery_tomorrow"
            app:layout_constraintTop_toBottomOf="@id/product_delivery_tomorrow"
            tools:text="@string/placeholder_product_availability"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>